src/test/ui/nll/return-ref-mut-issue-46557.polonius.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/return-ref-mut-issue-46557.rs:4:21
   |
LL |     let ref mut x = 1234543;
   |                     ^^^^^^^ creates a temporary which is freed while still in use
LL |     x
   |     - borrow later used here
LL | }
   | - temporary value is freed at the end of this statement
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0716`.
